--- a/evenements/evenements.html
+++ b/evenements/evenements.html
@@ -83,7 +83,7 @@
                             <div id="dropdown2" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="#" style="color: #fff;">Les Sports</a>
+                                        <a class="dropdown-link" href="/sportiut" style="color: #fff;">Les Sports</a>
                                     </li>
                                     <li role="menuitem">
                                         <a class="dropdown-link" href="/horaires-sport" style="color: #fff;">Horaires
