--- a/presentation.html
+++ b/presentation.html
@@ -97,7 +97,7 @@
                                             style="color: #fff;">Les sports</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/horaires-sport"
+                                        <a class="dropdown-link" href="/planning-sport"
                                             style="color: #fff;">Horaires d'entraînements</a>
                                     </li>
                                 </ul>
