--- a/evenements/evenements.html
+++ b/evenements/evenements.html
@@ -86,7 +86,7 @@
                                         <a class="dropdown-link" href="/sportiut" style="color: #fff;">Les Sports</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/horaires-sport" style="color: #fff;">Horaires
+                                        <a class="dropdown-link" href="/planning-sport" style="color: #fff;">Horaires
                                             d'entraînements</a>
                                     </li>
                                 </ul>
