--- a/evenements/evenements.html
+++ b/evenements/evenements.html
@@ -86,8 +86,7 @@
                                         <a class="dropdown-link" href="/sportiut" style="color: #fff;">Les Sports</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/planning-sport" style="color: #fff;">Horaires
-                                            d'entraînements</a>
+                                        <a class="dropdown-link" href="/planning-sport" style="color: #fff;">Planning des sports</a>
                                     </li>
                                 </ul>
                             </div>
