--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                     </li>
                                     <li role="menuitem">
                                         <a class="dropdown-link" href="/planning-sport"
-                                            style="color: #fff;">Horaires d'entraînements</a>
+                                            style="color: #fff;">Planning des sports</a>
                                     </li>
                                 </ul>
                             </div>
