--- a/sportiut.html
+++ b/sportiut.html
@@ -96,8 +96,7 @@
                                         <a class="dropdown-link" href="#" style="color: #fff;">Les Sports</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/planning-sport" style="color: #fff;">Horaires
-                                            d'entraînements</a>
+                                        <a class="dropdown-link" href="/planning-sport" style="color: #fff;">Planning des sports</a>
                                     </li>
                                 </ul>
                             </div>
