--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                 <ul role="menu">
                                     <li role="menuitem">
                                         <a class="dropdown-link" href="/evenements/evenements"
-                                            style="color: #fff;">Tous les événements à venir</a>
+                                            style="color: #fff; text-decoration: none; ">Tous les événements à venir</a>
                                     </li>
                                 </ul>
                             </div>
@@ -92,11 +92,11 @@
                                 <ul role="menu">
                                     <li role="menuitem">
                                         <a class="dropdown-link" href="/sportiut"
-                                            style="color: #fff;">Les sports</a>
+                                            style="color: #fff; text-decoration: none;">Les sports</a>
                                     </li>
                                     <li role="menuitem">
                                         <a class="dropdown-link" href="/planning-sport"
-                                            style="color: #fff;">Planning des sports</a>
+                                            style="color: #fff; text-decoration: none;">Planning des sports</a>
                                     </li>
                                 </ul>
                             </div>
