--- a/evenements/evenements.html
+++ b/evenements/evenements.html
@@ -68,7 +68,7 @@
                             <div id="dropdown1" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="#" style="color: #fff;">Tous
+                                        <a class="dropdown-link" href="#" style="color: #fff; text-decoration: none;">Tous
                                             les événements à venir</a>
                                     </li>
                                 </ul>
@@ -83,10 +83,10 @@
                             <div id="dropdown2" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/sportiut" style="color: #fff;">Les Sports</a>
+                                        <a class="dropdown-link" href="/sportiut" style="color: #fff; text-decoration: none;">Les Sports</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/planning-sport" style="color: #fff;">Planning des sports</a>
+                                        <a class="dropdown-link" href="/planning-sport" style="color: #fff; text-decoration: none;">Planning des sports</a>
                                     </li>
                                 </ul>
                             </div>
