--- a/presentation.html
+++ b/presentation.html
@@ -94,7 +94,7 @@
                                 <ul role="menu">
                                     <li role="menuitem">
                                         <a class="dropdown-link" href="/sportiut"
-                                            style="color: #fff; text-decoration: none;">Les sports</a>
+                                            style="color: #fff; text-decoration: none;">Les Sports</a>
                                     </li>
                                     <li role="menuitem">
                                         <a class="dropdown-link" href="/planning-sport"
