--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             }
         </style>
 
-        <div class="slideshow">
+        <!--<div class="slideshow">
 
             <img src="/img/pics/1.JPG" alt="" class="pics">
             <img src="/img/pics/3.JPG" alt="" class="pics">
@@ -252,7 +252,7 @@
 
         </div>
 
-        <p style="display: flex; justify-content: center; text-decoration: underline;">Résumé en image de notre tournoi de Futsal</p>
+        <p style="display: flex; justify-content: center; text-decoration: underline;">Résumé en image de notre tournoi de Futsal</p>-->
 
         <section class="main-content">
             <div class="container-xl">
