--- a/presentation.html
+++ b/presentation.html
@@ -144,7 +144,7 @@
 
     <main style="padding: 1.5rem; margin: 0 auto; max-width: 1100px">
 
-        <div class="presentation">
+        <!--<div class="presentation">
             <h2>Présentation</h2>
             <h3>Le Bureau des Sports favorise la pratique de nombreux sports sur le campus, grâce à l’entraide des BDS
                 de
@@ -189,9 +189,9 @@
                 Le site va permettre au BDS d’impliquer plus facilement les étudiants à participer aux évènements
                 sportifs en renforçant le côté compétitif de celui-ci. <!--La rubrique <a class="missions-suaps"
                     href="/classements/equipes" target=”_blank”>Classement</a> sera utilisé pour suivre l’avancée de
-                chaque équipe.-->
+                chaque équipe.
             </li>
-        </div>
+        </div>-->
 
     </main>
 
