--- a/evenements/evenements.html
+++ b/evenements/evenements.html
@@ -58,11 +58,11 @@
             <div class="nav-start">
                 <nav class="menu" style="background-color: #1a202c;">
                     <ul class="menu-bar">
-                        <li><a class="nav-link" href="/">Accueil</a></li>
-                        <li><a class="nav-link" href="/presentation">Le Bureau</a></li>
+                        <li><a class="nav-link" href="/" style="color: #fff;">Accueil</a></li>
+                        <li><a class="nav-link" href="/presentation" style="color: #fff;">Le Bureau</a></li>
                         <li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true"
-                                aria-expanded="false" aria-label="discover">
+                                aria-expanded="false" aria-label="discover" style="color: #fff;">
                                 Événements
                             </button>
                             <div id="dropdown1" class="dropdown">
@@ -77,7 +77,7 @@
 
                         <li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown2" aria-haspopup="true"
-                                aria-expanded="false" aria-label="discover">
+                                aria-expanded="false" aria-label="discover" style="color: #fff;">
                                 Sport à l'IUT
                             </button>
                             <div id="dropdown2" class="dropdown">
