--- a/evenements/evenements.html
+++ b/evenements/evenements.html
@@ -21,7 +21,7 @@
     <meta http-equiv="content-language" content="fr">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 
-    <title>BDS - Actualités</title>
+    <title>Événements</title>
     <meta name="description" content="Le BDS de l’IUT de Saint-Nazaire est une association qui a pour but d’organiser des événements sportifs et festifs pour les 1500 étudiants de l’IUT de Saint-Nazaire.">
 
     <meta name="author" content="Bureau des Sports IUT Saint-Nazaire">
