--- a/planning-sport.html
+++ b/planning-sport.html
@@ -143,7 +143,7 @@
     <main style="padding: 1.5rem; margin: 0 auto; max-width: 2000px">
 
         <div class="planning_sports">
-            <h1>PLANNING DES SPORTS</h1>
+            <h1 title="from https://www.cs-sports.fr/BDS/index.php?tab=planning">PLANNING DES SPORTS</h1>
 
             <table style="margin : auto; margin-top : 50px">
                 <thead>
@@ -347,6 +347,8 @@
                 </tbody>
             </table>
         </div>
+
+        <p style="text-align: center;">Pour toute question relative aux sports, vous pouvez contacter Stéfan CORLAY, Président du BDS, à cette adresse : <a href="mailto:stefan.corlay@etu.univ-nantes.fr">stefan.corlay@etu.univ-nantes.fr</a></p>
     </main>
 
     <footer class="footer-distributed" style="padding: 2rem; margin: 0 auto; max-width: 1300px;">
