--- a/planning-sport.html
+++ b/planning-sport.html
@@ -348,7 +348,7 @@
             </table>
         </div>
 
-        <p style="text-align: center;">Pour toute question relative aux sports, vous pouvez contacter Stéfan CORLAY, Président du BDS, à cette adresse : <a href="mailto:stefan.corlay@etu.univ-nantes.fr">stefan.corlay@etu.univ-nantes.fr</a></p>
+        <p style="text-align: center;">Pour toute question relative aux sports, vous pouvez contacter le Bureau des Sports, à cette adresse : <a href="mailto:bds.iutsn.contact@gmail.com">bds.iutsn.contact@gmail.com</a></p>
     </main>
 
     <footer class="footer-distributed" style="padding: 2rem; margin: 0 auto; max-width: 1300px;">
