--- a/sportiut.html
+++ b/sportiut.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link rel="stylesheet" href="/css/styles1.css">
     <link rel="stylesheet" type="text/css" href="./css/index.css">
-    <link rel="stylesheet" href="/sports.css">
+    <link rel="stylesheet" href="./css/sports.css">
     <link rel="shortcut icon" href="./img/bds-logo-shark.png">
 
     <meta name="fragment" content="!">
