--- a/inscription-suaps.html
+++ b/inscription-suaps.html
@@ -24,14 +24,13 @@
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link rel="stylesheet" href="/css/styles1.css">
     <link rel="stylesheet" type="text/css" href="./css/index.css">
-    <link rel="stylesheet" href="./css/sports.css">
     <link rel="shortcut icon" href="./img/bds-logo-shark.png">
 
     <meta name="fragment" content="!">
     <meta http-equiv="content-language" content="fr">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 
-    <title>Sport à l'IUT</title>
+    <title>Inscription SUAPS</title>
     <meta name="description"
         content="Le Bureau des Sports de l’IUT de Saint-Nazaire est une association qui a pour but d’organiser des événements sportifs et festifs pour les 1500 étudiants de l’IUT de Saint-Nazaire.">
     <meta name="keywords"
@@ -95,7 +94,7 @@
                             <div id="dropdown2" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="#"
+                                        <a class="dropdown-link" href="/sportiut"
                                             style="color: #fff; text-decoration: none;">Les Sports</a>
                                     </li>
                                     <li role="menuitem">
@@ -103,7 +102,7 @@
                                             style="color: #fff; text-decoration: none;">Planning des sports</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/inscription-suaps"
+                                        <a class="dropdown-link" href="#"
                                             style="color: #fff; text-decoration: none;">Comment s'inscrire ?</a>
                                     </li>
                                 </ul>
@@ -150,177 +149,9 @@
 
     <main style="padding: 1.5rem; margin: 0 auto; max-width: 1300px">
 
-        <h1>Découvrez les sports proposés par la SUAPS de Saint-Nazaire</h1>
+        <h1>Comment s'inscrire à la SUAPS ?</h1>
 
 
-        <br>
-        <p style="text-align: center;">Retrouvez le planning des sports via cette page <a
-                href="/planning-sport">Planning des sports</a></p>
-        <br>
-
-
-        <div class="cord-grid">
-            <a class="cord" href="">
-                <div class="cord__background"
-                    style="background : url();background-size:cover;background-position:center">
-                </div>
-                <div class="cord__content">
-                    <h3 class="cord__heading">Athlétisme</h3>
-                </div>
-            </a>
-            <a class="cord" href="">
-                <div class="cord__background"
-                    style="background : url();background-size:cover;background-position:center">
-                </div>
-                <div class="cord__content">
-                    <h3 class="cord__heading">Badminton</h3>
-                </div>
-            </a>
-            <a class="cord" href="">
-                <div class="cord__background"
-                    style="background : url();background-size:cover;background-position:center">
-                </div>
-                <div class="cord__content">
-                    <h3 class="cord__heading">Basket M Compét</h3>
-                </div>
-            </a>
-            <a class="cord" href="">
-                <div class="cord__background"
-                    style="background : url();background-size:cover;background-position:center">
-                </div>
-                <div class="cord__content">
-                    <h3 class="cord__heading">Basket Loisir + F</h3>
-                </div>
-            </a>
-            <a class="cord" href="">
-                <div class="cord__background"
-                    style="background : url();background-size:cover;background-position:center">
-                </div>
-                <div class="cord__content">
-                    <h3 class="cord__heading">Body art</h3>
-                </div>
-            </a>
-            <a class="cord" href="">
-                <div class="cord__background"
-                    style="background : url();background-size:cover;background-position:center">
-                </div>
-                <div class="cord__content">
-                    <h3 class="cord__heading">Cross Training</h3>
-                </div>
-            </a>
-            <a class="cord" href="">
-                <div class="cord__background"
-                    style="background : url();background-size:cover;background-position:center">
-                </div>
-                <div class="cord__content">
-                    <h3 class="cord__heading">Danse</h3>
-                </div>
-            </a>
-            <a class="cord" href="">
-                <div class="cord__background"
-                    style="background : url();background-size:cover;background-position:center">
-                </div>
-                <div class="cord__content">
-                    <h3 class="cord__heading">Escalade</h3>
-                </div>
-            </a>
-            <a class="cord" href="">
-                <div class="cord__background"
-                    style="background : url();background-size:cover;background-position:center">
-                </div>
-                <div class="cord__content">
-                    <h3 class="cord__heading">Fitness</h3>
-                </div>
-            </a>
-            <a class="cord" href="">
-                <div class="cord__background"
-                    style="background : url();background-size:cover;background-position:center">
-                </div>
-                <div class="cord__content">
-                    <h3 class="cord__heading">Football Compét IUT + F</h3>
-                </div>
-            </a>
-            <a class="cord" href="">
-                <div class="cord__background"
-                    style="background : url();background-size:cover;background-position:center">
-                </div>
-                <div class="cord__content">
-                    <h3 class="cord__heading">Football Compét / Polytech</h3>
-                </div>
-            </a>
-            <a class="cord" href="">
-                <div class="cord__background"
-                    style="background : url();background-size:cover;background-position:center">
-                </div>
-                <div class="cord__content">
-                    <h3 class="cord__heading">Futsal<h3>
-                </div>
-            </a>
-            <a class="cord" href="">
-                <div class="cord__background"
-                    style="background : url();background-size:cover;background-position:center">
-                </div>
-                <div class="cord__content">
-                    <h3 class="cord__heading">Handball</h3>
-                </div>
-            </a>
-            <a class="cord" href="">
-                <div class="cord__background"
-                    style="background : url();background-size:cover;background-position:center">
-                </div>
-                <div class="cord__content">
-                    <h3 class="cord__heading">Krav maga</h3>
-                </div>
-            </a>
-            <a class="cord" href="">
-                <div class="cord__background"
-                    style="background : url();background-size:cover;background-position:center">
-                </div>
-                <div class="cord__content">
-                    <h3 class="cord__heading">Natation</h3>
-                </div>
-            </a>
-            <a class="cord" href="">
-                <div class="cord__background"
-                    style="background : url();background-size:cover;background-position:center">
-                </div>
-                <div class="cord__content">
-                    <h3 class="cord__heading">Rugby</h3>
-                </div>
-            </a>
-            <a class="cord" href="">
-                <div class="cord__background"
-                    style="background : url();background-size:cover;background-position:center">
-                </div>
-                <div class="cord__content">
-                    <h3 class="cord__heading">Taiji Qi Gong</h3>
-                </div>
-            </a>
-            <a class="cord" href="javascript:DisplayConnectFiche('Tennis')">
-                <div class="cord__background"
-                    style="background : url();background-size:cover;background-position:center">
-                </div>
-                <div class="cord__content">
-                    <h3 class="cord__heading">Tennis + Paddle</h3>
-                </div>
-            </a>
-            <a class="cord" href="">
-                <div class="cord__background"
-                    style="background : url();background-size:cover;background-position:center">
-                </div>
-                <div class="cord__content">
-                    <h3 class="cord__heading">Tennis de table</h3>
-                </div>
-            </a>
-            <a class="cord" href="">
-                <div class="cord__background"
-                    style="background : url();background-size:cover;background-position:center">
-                </div>
-                <div class="cord__content">
-                    <h3 class="cord__heading">Volley ball</h3>
-                </div>
-            </a>
-        </div>
 
     </main>
 
