--- a/planning-sport.html
+++ b/planning-sport.html
@@ -98,6 +98,10 @@
                                     <li role="menuitem">
                                         <a class="dropdown-link" href="#" style="color: #fff; text-decoration: none;">Planning des sports</a>
                                     </li>
+                                    <li role="menuitem">
+                                        <a class="dropdown-link" href="/inscription-suaps"
+                                            style="color: #fff; text-decoration: none;">Comment s'inscrire ?</a>
+                                    </li>
                                 </ul>
                             </div>
                         </li>
