--- a/presentation.html
+++ b/presentation.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link rel="stylesheet" href="/css/styles1.css">
     <link rel="stylesheet" type="text/css" href="./css/index.css">
+    <link rel="stylesheet" href="./css/sports.css">
     <link rel="shortcut icon" href="./img/bds-logo-shark.png">
 
     <meta name="fragment" content="!">
@@ -143,6 +144,67 @@
     </header>
 
     <main style="padding: 1.5rem; margin: 0 auto; max-width: 1100px">
+
+       <!-- <div class="cord-grid">
+            <a class="cord" href="">
+                <div class="cord__background"
+                    style="background : url();background-size:cover;background-position:center">
+                </div>
+                <div class="cord__content">
+                    <h3 class="cord__heading">Stéfan</h3>
+                </div>
+            </a>
+            <a class="cord" href="">
+                <div class="cord__background"
+                    style="background : url();background-size:cover;background-position:center">
+                </div>
+                <div class="cord__content">
+                    <h3 class="cord__heading">Ousmane</h3>
+                </div>
+            </a>
+            <a class="cord" href="">
+                <div class="cord__background"
+                    style="background : url();background-size:cover;background-position:center">
+                </div>
+                <div class="cord__content">
+                    <h3 class="cord__heading">Mahmmoud</h3>
+                </div>
+            </a>
+            <a class="cord" href="">
+                <div class="cord__background"
+                    style="background : url();background-size:cover;background-position:center">
+                </div>
+                <div class="cord__content">
+                    <h3 class="cord__heading">Nicolas</h3>
+                </div>
+            </a>
+            <a class="cord" href="">
+                <div class="cord__background"
+                    style="background : url();background-size:cover;background-position:center">
+                </div>
+                <div class="cord__content">
+                    <h3 class="cord__heading">Marie</h3>
+                </div>
+            </a>
+            <a class="cord" href="">
+                <div class="cord__background"
+                    style="background : url();background-size:cover;background-position:center">
+                </div>
+                <div class="cord__content">
+                    <h3 class="cord__heading">Angèle</h3>
+                </div>
+            </a>
+            <a class="cord" href="">
+                <div class="cord__background"
+                    style="background : url();background-size:cover;background-position:center">
+                </div>
+                <div class="cord__content">
+                    <h3 class="cord__heading">Tambo</h3>
+                </div>
+            </a>
+        </div>-->
+
+
 
         <!--<div class="presentation">
             <h2>Présentation</h2>
