--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                             style="color: #fff; text-decoration: none;">Planning des sports</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/inscription-suaps"
+                                        <a class="dropdown-link" href="https://iut-sn.univ-nantes.fr/vie-etudiante/les-activites-sportives"
                                             style="color: #fff; text-decoration: none;">Comment s'inscrire ?</a>
                                     </li>
                                 </ul>
