--- a/presentation.html
+++ b/presentation.html
@@ -101,6 +101,10 @@
                                         <a class="dropdown-link" href="/planning-sport"
                                             style="color: #fff; text-decoration: none;">Planning des sports</a>
                                     </li>
+                                    <li role="menuitem">
+                                        <a class="dropdown-link" href="https://iut-sn.univ-nantes.fr/vie-etudiante/les-activites-sportives"
+                                            style="color: #fff; text-decoration: none;">Comment s'inscrire ?</a>
+                                    </li>
                                 </ul>
                             </div>
                         </li>
@@ -145,7 +149,7 @@
 
     <main style="padding: 1.5rem; margin: 0 auto; max-width: 1100px">
 
-       <!-- <div class="cord-grid">
+       <!--<div class="cord-grid">
             <a class="cord" href="">
                 <div class="cord__background"
                     style="background : url();background-size:cover;background-position:center">
