--- a/presentation.html
+++ b/presentation.html
@@ -149,7 +149,7 @@
 
     <main style="padding: 1.5rem; margin: 0 auto; max-width: 1100px">
 
-       <!--<div class="cord-grid">
+       <div class="cord-grid">
             <a class="cord" href="">
                 <div class="cord__background"
                     style="background : url();background-size:cover;background-position:center">
@@ -206,7 +206,7 @@
                     <h3 class="cord__heading">Tambo</h3>
                 </div>
             </a>
-        </div>-->
+        </div>
 
 
 
