--- a/presentation.html
+++ b/presentation.html
@@ -71,35 +71,20 @@
                     <ul class="menu-bar">
                         <li><a class="nav-link" href="/">Accueil</a></li>
                         <li><a class="nav-link" href="#">Le Bureau</a></li>
+                        <li><a class="nav-link" href="/evenements" style="color: #fff;">Événements</a></li>
+
                         <li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true"
-                                aria-expanded="false" aria-label="discover">
-                                Événements
+                                aria-expanded="false" aria-label="discover" style="color: #fff;">
+                                Sport à l'IUT
                             </button>
                             <div id="dropdown1" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/evenements/evenements"
-                                            style="color: #fff; text-decoration: none;">Tous les événements à venir</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </li>
-
-                        <li>
-                            <button class="nav-link dropdown-btn" data-dropdown="dropdown2" aria-haspopup="true"
-                                aria-expanded="false" aria-label="discover">
-                                Sport à l'IUT
-                            </button>
-                            <div id="dropdown2" class="dropdown">
-                                <ul role="menu">
-                                    <li role="menuitem">
-                                        <a class="dropdown-link" href="/sportiut"
-                                            style="color: #fff; text-decoration: none;">Les Sports</a>
+                                        <a class="dropdown-link" href="/sportiut" style="color: #fff; text-decoration: none;">Les Sports</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/planning-sport"
-                                            style="color: #fff; text-decoration: none;">Planning des sports</a>
+                                        <a class="dropdown-link" href="/planning-sport" style="color: #fff; text-decoration: none;">Planning des sports</a>
                                     </li>
                                     <li role="menuitem">
                                         <a class="dropdown-link" href="https://iut-sn.univ-nantes.fr/vie-etudiante/les-activites-sportives"
