--- a/evenements.html
+++ b/evenements.html
@@ -60,27 +60,14 @@
                     <ul class="menu-bar">
                         <li><a class="nav-link" href="/" style="color: #fff;">Accueil</a></li>
                         <li><a class="nav-link" href="/presentation" style="color: #fff;">Le Bureau</a></li>
+                        <li><a class="nav-link" href="/evenements" style="color: #fff;">Événements</a></li>
+
                         <li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true"
                                 aria-expanded="false" aria-label="discover" style="color: #fff;">
-                                Événements
-                            </button>
-                            <div id="dropdown1" class="dropdown">
-                                <ul role="menu">
-                                    <li role="menuitem">
-                                        <a class="dropdown-link" href="#" style="color: #fff; text-decoration: none;">Tous
-                                            les événements à venir</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </li>
-
-                        <li>
-                            <button class="nav-link dropdown-btn" data-dropdown="dropdown2" aria-haspopup="true"
-                                aria-expanded="false" aria-label="discover" style="color: #fff;">
                                 Sport à l'IUT
                             </button>
-                            <div id="dropdown2" class="dropdown">
+                            <div id="dropdown1" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
                                         <a class="dropdown-link" href="/sportiut" style="color: #fff; text-decoration: none;">Les Sports</a>
