--- a/planning-sport.html
+++ b/planning-sport.html
@@ -70,27 +70,14 @@
                     <ul class="menu-bar">
                         <li><a class="nav-link" href="/">Accueil</a></li>
                         <li><a class="nav-link" href="/presentation">Le Bureau</a></li>
-                        <li>
-                            <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true"
-                                aria-expanded="false" aria-label="discover">
-                                Événements
-                            </button>
-                            <div id="dropdown1" class="dropdown">
-                                <ul role="menu">
-                                    <li role="menuitem">
-                                        <a class="dropdown-link" href="/evenements/evenements" style="color: #fff; text-decoration: none;">Tous
-                                            les événements à venir</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </li>
+                        <li><a class="nav-link" href="/evenements" style="color: #fff;">Événements</a></li>
 
                         <li>
-                            <button class="nav-link dropdown-btn" data-dropdown="dropdown2" aria-haspopup="true"
-                                aria-expanded="false" aria-label="discover">
+                            <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true"
+                                aria-expanded="false" aria-label="discover" style="color: #fff;">
                                 Sport à l'IUT
                             </button>
-                            <div id="dropdown2" class="dropdown">
+                            <div id="dropdown1" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
                                         <a class="dropdown-link" href="/sportiut" style="color: #fff; text-decoration: none;">Les Sports</a>
