--- a/presentation.html
+++ b/presentation.html
@@ -134,10 +134,10 @@
 
     <main style="padding: 1.5rem; margin: 0 auto; max-width: 1100px">
 
-       <!--<div class="cord-grid">
+       <div class="cord-grid">
             <a class="cord" href="">
                 <div class="cord__background"
-                    style="background : url();background-size:cover;background-position:center">
+                    style="background : url(https://www.scorlay.com/assets/images/stefan-2.jpg);background-size:cover;background-position:center">
                 </div>
                 <div class="cord__content">
                     <h3 class="cord__heading">Stéfan</h3>
@@ -191,7 +191,7 @@
                     <h3 class="cord__heading">Tambo</h3>
                 </div>
             </a>
-        </div>-->
+        </div>
 
 
 
