--- a/planning-sport.html
+++ b/planning-sport.html
@@ -80,10 +80,12 @@
                             <div id="dropdown1" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="#" style="color: #fff; text-decoration: none;">Planning des sports</a>
+                                        <a class="dropdown-link" href="#"
+                                            style="color: #fff; text-decoration: none;">Planning des sports</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="https://iut-sn.univ-nantes.fr/vie-etudiante/les-activites-sportives"
+                                        <a class="dropdown-link"
+                                            href="https://iut-sn.univ-nantes.fr/vie-etudiante/les-activites-sportives"
                                             style="color: #fff; text-decoration: none;">Comment s'inscrire ?</a>
                                     </li>
                                 </ul>
@@ -167,7 +169,7 @@
                     <tr style="text-align : center">
                         <th><span class="sport_table">Basket M Compét</span></th>
                         </th>
-                        <td class="full_table"><span class="horaires_table">19h30-21h</span><br><span
+                        <td class="full_table"><span class="horaires_table">20h-21h30</span><br><span
                                 class="lieu_table">Gymnase Heinlex</span></td>
                         <td></td>
                         <td></td>
@@ -176,7 +178,7 @@
                     <tr style="text-align : center">
                         <th><span class="sport_table">Basket Loisir + F</span></th>
                         </th>
-                        <td class="full_table"><span class="horaires_table">21h-22h30</span><br><span
+                        <td class="full_table"><span class="horaires_table">21h15-22h30</span><br><span
                                 class="lieu_table">Gymnase Heinlex</span></td>
                         <td></td>
                         <td></td>
@@ -190,25 +192,6 @@
                                 class="lieu_table">Gymnase de la soucoupe</span></td>
                         <td></td>
                         <td></td>
-                    </tr>
-                    <tr style="text-align : center">
-                        <th><span class="sport_table">Cross Training</span></th>
-                        </th>
-                        <td></td>
-                        <td></td>
-                        <td class="full_table"><span class="horaires_table">18h-19h45</span><br><span
-                                class="lieu_table">IUT
-                                Salle 10.108</span></td>
-                        <td></td>
-                    </tr>
-                    <tr style="text-align : center">
-                        <th><span class="sport_table">Danse</span></th>
-                        </th>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td class="full_table"><span class="horaires_table">13h30-14h30</span><br><span
-                                class="lieu_table">IUT Salle 10.103</span></td>
                     </tr>
                     <tr style="text-align : center">
                         <th><span class="sport_table">Escalade</span></th>
@@ -252,9 +235,16 @@
                         <td class="full_table"><span class="horaires_table">20h-22h</span><br><span
                                 class="lieu_table">Gymnase Reton</span></td>
                         <td></td>
-                        <td class="full_table"><span class="horaires_table">20h-22h</span><br><span
-                                class="lieu_table">Gymnase Heinlex</span></td>
                         <td></td>
+                        <td></td>
+                    </tr>
+                    <tr style="text-align : center">
+                        <th><span class="sport_table">Golf</span></th>
+                        </th>
+                        <td class="full_table"><span class="horaires_table">Sur demande</span><br></td>
+                        <td class="full_table"><span class="horaires_table">Sur demande</span><br></td>
+                        <td class="full_table"><span class="horaires_table">Sur demande</span><br></td>
+                        <td class="full_table"><span class="horaires_table">Sur demande</span><br></td>
                     </tr>
                     <tr style="text-align : center">
                         <th><span class="sport_table">Handball</span></th>
@@ -284,10 +274,22 @@
                                 class="lieu_table">Piscine de la Bouletterie</span></td>
                     </tr>
                     <tr style="text-align : center">
+                        <th><span class="sport_table">Padel</span></th>
+                        </th>
+                        <td class="full_table"><span class="horaires_table">Sur demande</span><br><span
+                                class="lieu_table">SNTC</span></td>
+                        <td class="full_table"><span class="horaires_table">Sur demande</span><br><span
+                                class="lieu_table">SNTC</span></td>
+                        <td class="full_table"><span class="horaires_table">Sur demande</span><br><span
+                                class="lieu_table">SNTC</span></td>
+                        <td class="full_table"><span class="horaires_table">Sur demande</span><br><span
+                                class="lieu_table">SNTC</span></td>
+                    </tr>
+                    <tr style="text-align : center">
                         <th><span class="sport_table">Rugby</span></th>
                         </th>
-                        <td class="full_table"><span class="horaires_table">18h-20h</span><br><span
-                                class="lieu_table">Piscine de la Bouletterie</span></td>
+                        <td class="full_table"><span class="horaires_table">18h30-20h</span><br><span
+                                class="lieu_table">Stade Pré-Hembert</span></td>
                         <td></td>
                         <td></td>
                         <td></td>
@@ -302,13 +304,13 @@
                         <td></td>
                     </tr>
                     <tr style="text-align : center">
-                        <th><span class="sport_table">Tennis + Paddle</span></th>
+                        <th><span class="sport_table">Tennis</span></th>
                         </th>
                         <td></td>
                         <td></td>
                         <td></td>
                         <td class="full_table"><span class="horaires_table">13h30-16h (2 séances de
-                                1h15)</span><br><span class="lieu_table">Gymanse Buisson</span></td>
+                                1h15)</span><br><span class="lieu_table">Tennis Leo Lagrange</span></td>
                     </tr>
                     <tr style="text-align : center">
                         <th><span class="sport_table">Tennis de table</span></th>
@@ -323,7 +325,7 @@
                         <th><span class="sport_table">Volley ball</span></th>
                         </th>
                         <td></td>
-                        <td class="full_table"><span class="horaires_table">20h-22h</span><br><span
+                        <td class="full_table"><span class="horaires_table">18h-20h</span><br><span
                                 class="lieu_table">Gymanse Heinlex</span></td>
                         <td></td>
                         <td></td>
@@ -336,7 +338,8 @@
             </table>
         </div>
 
-        <p style="text-align: center;">Pour toute question relative aux sports, vous pouvez contacter le Bureau des Sports, à cette adresse : <a href="mailto:bds.iutsn.contact@gmail.com">bds.iutsn.contact@gmail.com</a></p>
+        <p style="text-align: center;">Pour toute question relative aux sports, vous pouvez contacter le Bureau des
+            Sports, à cette adresse : <a href="mailto:bds.iutsn.contact@gmail.com">bds.iutsn.contact@gmail.com</a></p>
     </main>
 
     <footer class="footer-distributed" style="padding: 2rem; margin: 0 auto; max-width: 1300px;">
