--- a/presentation.html
+++ b/presentation.html
@@ -71,21 +71,28 @@
                     <ul class="menu-bar">
                         <li><a class="nav-link" href="/">Accueil</a></li>
                         <li><a class="nav-link" href="#">Le Bureau</a></li>
-                        <li><a class="nav-link" href="/evenements" style="color: #fff;">Événements</a></li>
-
+                        <!--<li><a class="nav-link" href="/evenements" style="color: #fff;">Événements</a></li>-->
                         <li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true"
                                 aria-expanded="false" aria-label="discover" style="color: #fff;">
-                                Sport à l'IUT
+                                Événements
                             </button>
                             <div id="dropdown1" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/planning-sport" style="color: #fff; text-decoration: none;">Planning des sports</a>
+                                        <a class="dropdown-link" href="/evenements" style="color: #fff; text-decoration: none;">Tous les événements</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="https://iut-sn.univ-nantes.fr/vie-etudiante/les-activites-sportives"
-                                            style="color: #fff; text-decoration: none;">Comment s'inscrire ?</a>
+                                        <a class="dropdown-link" href="https://www.helloasso.com/associations/bureau-des-sports-iut-saint-nazaire/evenements/tournoi-futsal-1"
+                                            style="color: #fff; text-decoration: none;">Tournoi Futsal</a>
+                                    </li>
+                                    <li role="menuitem">
+                                        <a class="dropdown-link" href="https://www.helloasso.com/associations/bureau-des-sports-iut-saint-nazaire/evenements/tournoi-volley-ball-1"
+                                            style="color: #fff; text-decoration: none;">Tournoi Volley-ball</a>
+                                    </li>
+                                    <li role="menuitem">
+                                        <a class="dropdown-link" href="https://www.helloasso.com/associations/bureau-des-sports-iut-saint-nazaire/evenements/tournoi-basket-ball"
+                                            style="color: #fff; text-decoration: none;">Tournoi Basket-ball</a>
                                     </li>
                                 </ul>
                             </div>
