--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
                         <li><a class="nav-link" href="/presentation">Le Bureau</a></li>
                         <!--<li><a class="nav-link" href="/evenements" style="color: #fff;">Événements</a></li>-->
                         <li>
-                            <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true"
+                            <button class="nav-link dropdown-btn" data-dropdown="dropdown" aria-haspopup="true"
                                 aria-expanded="false" aria-label="discover" style="color: #fff;">
                                 Événements
                             </button>
-                            <div id="dropdown1" class="dropdown">
+                            <div id="dropdown" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
                                         <a class="dropdown-link" href="/evenements" style="color: #fff; text-decoration: none;">Tous les événements</a>
