--- a/presentation.html
+++ b/presentation.html
@@ -97,6 +97,23 @@
                                 </ul>
                             </div>
                         </li>
+                        <li>
+                            <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true"
+                                aria-expanded="false" aria-label="discover" style="color: #fff;">
+                                Sport à l'IUT
+                            </button>
+                            <div id="dropdown1" class="dropdown">
+                                <ul role="menu">
+                                    <li role="menuitem">
+                                        <a class="dropdown-link" href="/planning-sport" style="color: #fff; text-decoration: none;">Planning des sports</a>
+                                    </li>
+                                    <li role="menuitem">
+                                        <a class="dropdown-link" href="https://iut-sn.univ-nantes.fr/vie-etudiante/les-activites-sportives"
+                                            style="color: #fff; text-decoration: none;">Comment s'inscrire ?</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
                         <!--<li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown2" aria-haspopup="true"
                                 aria-expanded="false" aria-label="discover">
